docs/dns/pihole/pihole-0-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-external-svc
  namespace: traefik
  annotations:
    # This tells Traefik to use the transport we created above
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-pihole-transport@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-redirect
  namespace: traefik
spec:
  addPrefix:
    prefix: /admin
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole-external-svc-1 # Name should be unique, often suffixed
  namespace: traefik
  labels:
    # This label is CRITICAL; it must match your Service name
    kubernetes.io/service-name: pihole-external-svc
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "192.168.1.60"
    conditions:
      ready: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: traefik
  annotations:
    # This automatically sends / to /admin
    traefik.ingress.kubernetes.io/router.middlewares: traefik-pihole-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.local.spaelling.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-external-svc
                port:
                  name: http-web
  tls:
    - hosts:
        - pihole.local.spaelling.xyz
      secretName: pihole-tls
